[package]
name = "canoa"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
bollard = "0.17.0"
futures-util = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[profile.release]
strip = true
lto = true
codegen-units = 1
