[package]
name = "canoa"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = { version = "4", default-features = false, features = ["macros"] }
bollard = "0.17.0"
bytes = "1.7.1"
futures-util = "0.3.30"
lazy_static = "1.5.0"
minreq = "2.12.0"
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
validify = "1.4.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
